--- a/stylesheets/adaptive.css
+++ b/stylesheets/adaptive.css
@@ -22,14 +22,166 @@
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
   /* iPad Portrait */
+  .begin{
+    height:100vh;
+    width: 100vw;
+    display: grid;
+    grid-template: repeat(5, 20%);
+    overflow:hidden;
+  }
+  .head{
+    grid-area: 1/1/2/7;
 
-}
+  }
+
+  .head> p{
+    margin-top:2%;
+    font-size:37px;
+
+  }
+  .small_box{
+    display: none;
+  }
+  .big {
+    display: none;
+  }
+  .quater .big .b_1{
+    display:none;
+  }
+  .quater{
+    width: 100%;
+    height: 100%;
+    border-radius: 100% 0 0 0;
+    display:inline-block;
+  }
+  .quater.small{
+    width:10vw;
+    height: 10vw;
+  }
+  .small_box{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+  .small_box_1{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+  .footer{
+    grid-area: 7/1/8/6;
+      height: 100%;
+  }
+  .btn {
+    width: 35vw;
+    height: 35vw;
+    border: solid 5px black;
+    color: black;
+    border-radius: 40vw;
+    display: inline-grid;
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 3;
+    grid-row-end: 5;
+    font-family: OCRONEC;
+    text-align: center;
+    padding-top: 13vw;
+    vertical-align: middle;
+    box-sizing: border-box;
+    transition: .4/
+  }
+    p, .btn p{
+      font-size: 50px;
+    }
+    .setka .center_gap {
+      width: 100vw;
+      height: calc(100vh - 170px);
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: .2fr .8fr .2fr .8fr .2fr;
+      align-items: center;
+      justify-items: center;
+    }
+    .setka .conteiner_2 {
+      width: 30vw;
+      height: 30vw;
+      grid-area: 2/2/3/3;
+      grid-template-columns: 15vw 15vw;
+      grid-template-rows: 15vw 15vw;
+    }
+    .setka .conteiner_4 {
+      width: 30vw;
+      height: 30vw;
+      grid-template-columns: 7.25vw 7.25vw 7.25vw 7.25vw;
+      grid-template-rows: 7.25vw 7.25vw 7.25vw 7.25vw;
+      grid-area: 4/2/5/3;
+    }
+    .setka .conteiner_2 .square_2{
+      width: 15vw;
+      height: 15vw;
+
+          /* outline: solid 3px black; */
+    }
+    .setka .conteiner_4 .square_4{
+      width: 7.5vw;
+      height: 7.5vw;
+          /* outline: solid 3px black; */
+    }
+    .setka .center_gap p {
+
+    }
+    #p2{
+      grid-area: 3/2/4/3
+      justify-items: center;
+
+    }
+    #p4{
+      grid-area: 5/2/6/3
+    }
+    .top_text {
+      width: 50vw;
+    }
+  }
+
+
+
+  @media only screen  and (max-device-width: 375px)  {
+    /* iPhone SE */
+
+  }
+
+  @media print {
+    *{
+      display: none;
+    }
+    .redactor_div{
+      display: grid!important;
+    }
+    .red_square{
+      display:inline-grid!important;
+    }
+    #import {
+      display: grid !important;
+    }
+  }
+  /*
+  1680x1050 (MacBook Pro ’15.4)
+
+  1440x900 (MacBook Pro ’15)
+
+  1366x768 (MacBook Air ’11.6)
+
+  1280x800 (MacBook Pro ’13)*/
+
 
 @media only screen and (min-width: 480px) and (max-width: 768px) {
   /* промежуток */
 
   p, .btn_dalee p{
-    font-size: 18px;
+    font-size:30px;
   }
   .setka .center_gap {
     width: 100vw;
@@ -84,34 +236,80 @@
   /* iPhone X */
 
 .begin{
+  height:100vh;
+  width: 100vw;
   display: grid;
-  grid-template-columns: repeat(6, 16.6vw);
-  grid-template-rows: repeat(10, 16.6vw);
-  grid-template-rows: auto;
+  grid-template-rows: repeat(10, 10%);
+  grid-template-columns: repeat(5, 20%);
+  overflow:hidden;
 }
 .head{
-  grid-area: 1/1/3/7;
+  grid-area: 1/1/3/6;
+
+}
+
+.head> p{
+  margin-top:2.5%;
+  font-size:39px;
+
 }
 .small_box{
   display: none;
 }
-.
 .big {
   display: none;
 }
-/* .quater .big .b_1{
+.quater .big .b_1{
   display:none;
-} */
-.quarter{
-  width: 16,6vw;
-  height: 16,6vw;
 }
-.small{
-  width: 8.3vw;
-  height: 8.3vw;
+.quater{
+  width: 100%;
+  height: 100%;
+  border-radius: 100% 0 0 0;
+  display:inline-block;
+}
+.quater.small{
+  width:10vw;
+  height: 10vw;
+}
+.small_box{
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+.small_box_1{
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+.footer{
+  grid-area: 9/1/11/6;
+  height:100%;
+}
+.btn {
+  width: 35vw;
+  height: 35vw;
+  border: solid 5px black;
+  color: black;
+  border-radius: 40vw;
+  display: inline-grid;
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 7;
+  grid-row-end: 9;
+  font-family: OCRONEC;
+  text-align: center;
+  padding-top: 13vw;
+  vertical-align: middle;
+  box-sizing: border-box;
+  transition: .4/
 }
   p, .btn_dalee p{
-    font-size: 18px;
+    font-size: 30px;
   }
   .setka .center_gap {
     width: 100vw;
@@ -161,7 +359,7 @@
     width: 50vw;
   }
 }
-}
+
 
 
 @media only screen  and (max-device-width: 375px)  {
@@ -170,30 +368,17 @@
 }
 
 @media print {
-  /* *{
+  *{
     display: none;
-  } */
-  .redactor_div{
-    -webkit-filter: invert(100%);
-    display: grid!important;
-    background-color: white;
-
   }
-  .quater{
-    display:block;
-    width: 25%;
-    height: 25%;
-     -webkit-filter: invert(100%);
+  .redactor_div{
+    display: grid!important;
   }
   .red_square{
-    -webkit-filter: invert(0%);
-    background-color: white;
-    /* width: 25%;
-    height: 25%; */
     display:inline-grid!important;
   }
-  .top_bar, .p_p_btn, .footer_2p{
-    display: none;
+  #import {
+    display: grid !important;
   }
 }
 /*
