--- a/stylesheets/adaptive.css
+++ b/stylesheets/adaptive.css
@@ -75,6 +75,10 @@
     grid-row-end: 7;
     vertical-align: middle;
 }
+.btn{
+  grid-area: 3/4/5/6;
+}
+}
 
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
@@ -156,10 +160,12 @@
     p, .btn p{
       font-size: 50px;
     }
+
+
     .setka .center_gap {
       width: 100vw;
       height: calc(100vh - 170px);
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 2fr 1fr;
       grid-template-rows: .2fr .8fr .2fr .8fr .2fr;
       align-items: center;
       justify-items: center;
@@ -176,7 +182,13 @@
       height: 30vw;
       grid-template-columns: 7.25vw 7.25vw 7.25vw 7.25vw;
       grid-template-rows: 7.25vw 7.25vw 7.25vw 7.25vw;
-      grid-area: 4/2/5/3;
+      grid-area: 4/ 2 / 5 /3;
+    }
+    #p2{
+      grid-area: 3/2/4/3;
+    }
+    #p4{
+      grid-area: 5/2/6/3;
     }
     .setka .conteiner_2 .square_2{
       width: 15vw;
@@ -192,14 +204,15 @@
     .setka .center_gap p {
 
     }
-    #p2{
-      grid-area: 3/2/4/3
-      justify-items: center;
 
-    }
-    #p4{
-      grid-area: 5/2/6/3
-    }
+
+
+
+
+
+
+
+
     .top_text {
       width: 50vw;
     }
