--- a/stylesheets/adaptive.css
+++ b/stylesheets/adaptive.css
@@ -94,7 +94,9 @@
   }
   .head{
     grid-area: 1/1/2/7;
-
+    grid-area: 1/1//7;
+width: 20;
+height: 20vw;
   }
 
   .head> p{
@@ -136,29 +138,25 @@
     grid-template-rows: 1fr 1fr;
   }
   .footer{
-    grid-area: 7/1/8/6;
-      height: 100%;
+    grid-area: 5/1/8/7;
+    height: 100%;
   }
   .btn {
-    width: 35vw;
-    height: 35vw;
-    border: solid 5px black;
-    color: black;
-    border-radius: 40vw;
-    display: inline-grid;
-    grid-column-start: 2;
-    grid-column-end: 4;
-    grid-row-start: 3;
-    grid-row-end: 5;
-    font-family: OCRONEC;
-    text-align: center;
-    padding-top: 13vw;
-    vertical-align: middle;
-    box-sizing: border-box;
-    transition: .4/
+    width: 25vw;
+  height: 25vw;
+  border: solid 5px black;
+  color: black;
+  border-radius: 40vw;
+grid-area: 3/3/4/6;
+  font-family: OCRONEC;
+  text-align: center;
+  padding-top: 11vw;
+  vertical-align: middle;
+  box-sizing: border-box;
+  transition: .4/;
   }
     p, .btn p{
-      font-size: 50px;
+      font-size: 24px;
     }
 
 
@@ -204,7 +202,9 @@
     .setka .center_gap p {
 
     }
-
+    .b_1,.b_2, .b_3, .b_4{
+      display: none;
+    }
 
 
 
