--- a/stylesheets/adaptive.css
+++ b/stylesheets/adaptive.css
@@ -17,13 +17,13 @@
 @media only screen and (min-width: 1024px) and (max-width: 1400px) {
   /* Macbook Air 11.6" */
   .begin{
-    height:100vh;
-    width: 100vw;
+    /* height:100vh;
+    width: 100vw; */
     display: grid;
     /* grid-template: repeat(5, 11.1vw); */
     grid-template-columns: repeat(8,12.5vw);
     grid-template-rows: repeat(6,12.5vw);
-    overflow:hidden;
+    /* overflow:hidden; */
   }
   .quater{
     width: 100%;
