--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -198,6 +198,7 @@ background-color: white;
   height: 20vw;
   /* background-color: orange; */
   /* outline: solid 5px black; */
+  cursor: pointer;
 
   border: solid 5px black;
   color: black;
@@ -511,6 +512,8 @@ body .dragg{
 
 }
 .red_square_2{
+  cursor: pointer;
+  
   width: 20vw;
   height: 20vw;
   display:inline-grid;
@@ -518,6 +521,8 @@ body .dragg{
   background-color: black;
 }
 .red_square{
+  cursor: pointer;
+
     width:10vw;
     height: 10vw;
     display:inline-grid;
@@ -582,6 +587,7 @@ body .dragg{
 #containment-wrapper {
   width: 100vw; height:100%; padding-top: 5px; }
 .s_p_btn {
+  cursor: pointer;
   width: 25vw;
   height: 8vw;
   border: solid 4px black;
@@ -593,6 +599,8 @@ body .dragg{
   align-items: center;
 }
 .p_p_btn {
+  cursor: pointer;
+
   width: 25vw;
   height: 8vw;
   border: solid 4px black;
