--- a/stylesheets/adaptive.css
+++ b/stylesheets/adaptive.css
@@ -252,6 +252,82 @@ grid-area: 3/3/4/6;
 @media only screen and (min-width: 480px) and (max-width: 768px) {
   /* промежуток */
 
+  .begin{
+    height:100vh;
+    width: 100vw;
+    display: grid;
+    grid-template-rows: repeat(10, 10%);
+    grid-template-columns: repeat(5, 20%);
+    overflow:hidden;
+  }
+  .head{
+    grid-area: 1/1/3/6;
+
+  }
+
+  .head> p{
+    margin-top:2.5%;
+    font-size:39px;
+
+  }
+  .small_box{
+    display: none;
+  }
+  .big {
+    display: none;
+  }
+  .quater .big .b_1{
+    display:none;
+  }
+  .quater{
+    width: 100%;
+    height: 100%;
+    border-radius: 100% 0 0 0;
+    display:inline-block;
+  }
+  .quater.small{
+    width:10vw;
+    height: 10vw;
+  }
+  .small_box{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+  .small_box_1{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+  .footer{
+    grid-area: 9/1/11/6;
+    height:100%;
+  }
+  .btn {
+    width: 35vw;
+    height: 35vw;
+    border: solid 5px black;
+    color: black;
+    border-radius: 40vw;
+    display: inline-grid;
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 7;
+    grid-row-end: 9;
+    font-family: OCRONEC;
+    text-align: center;
+    padding-top: 13vw;
+    vertical-align: middle;
+    box-sizing: border-box;
+    transition: .4/
+  }
+    p, .btn_dalee p{
+      font-size: 30px;
+    }
   p, .btn_dalee p{
     font-size:30px;
   }
