--- a/stylesheets/adaptive.css
+++ b/stylesheets/adaptive.css
@@ -328,7 +328,9 @@ grid-area: 3/3/4/6;
     p, .btn_dalee p{
       font-size: 18px;
     }
-
+.cpmments p{
+  font-size: 18px;
+}
   .setka .center_gap {
     width: 100vw;
     height: calc(100vh - 170px);
