--- a/stylesheets/adaptive.css
+++ b/stylesheets/adaptive.css
@@ -159,7 +159,9 @@ grid-area: 3/3/4/6;
       font-size: 24px;
     }
 
-
+.comments p {
+    font-size: 18px;
+}
     .setka .center_gap {
       width: 100vw;
       height: calc(100vh - 170px);
