--- a/stylesheets/adaptive.css
+++ b/stylesheets/adaptive.css
@@ -258,18 +258,18 @@ grid-area: 3/3/4/6;
     height:100vh;
     width: 100vw;
     display: grid;
-    grid-template-rows: repeat(10, 10%);
+    grid-template-rows: repeat(5,20%);
     grid-template-columns: repeat(5, 20%);
     overflow:hidden;
   }
   .head{
-    grid-area: 1/1/3/6;
+    grid-area: 1/1/2/6;
 
   }
 
   .head> p{
     margin-top:2.5%;
-    font-size:18px;
+    font-size:28px;
 
   }
   .small_box{
@@ -288,8 +288,8 @@ grid-area: 3/3/4/6;
     display:inline-block;
   }
   .quater.small{
-    width:10vw;
-    height: 10vw;
+    width:100%;
+    height: 100%;
   }
   .small_box{
     width: 100%;
@@ -306,7 +306,7 @@ grid-area: 3/3/4/6;
     grid-template-rows: 1fr 1fr;
   }
   .footer{
-    grid-area: 9/1/11/6;
+    grid-area: 5/1/6/6;
     height:100%;
   }
   .btn {
@@ -316,10 +316,7 @@ grid-area: 3/3/4/6;
     color: black;
     border-radius: 40vw;
     display: inline-grid;
-    grid-column-start: 2;
-    grid-column-end: 4;
-    grid-row-start: 7;
-    grid-row-end: 9;
+grid-area: 3/3/5/5;
     font-family: OCRONEC;
     text-align: center;
     padding-top: 13vw;
@@ -379,6 +376,9 @@ grid-area: 3/3/4/6;
   }
   .top_text {
     width: 50vw;
+  }
+  .transperent{
+    display: none;
   }
 }
 
