--- a/stylesheets/adaptive.css
+++ b/stylesheets/adaptive.css
@@ -78,6 +78,9 @@
 .btn{
   grid-area: 3/4/5/6;
 }
+.transperent{
+  display: none;
+}
 }
 
 
@@ -213,7 +216,9 @@ grid-area: 3/3/4/6;
 
 
 
-
+    .transperent{
+      display: none;
+    }
 
     .top_text {
       width: 50vw;
@@ -515,6 +520,9 @@ grid-area: 3/3/5/5;
   }
   .top_text {
     width: 50vw;
+  }
+  .transperent{
+    display: none;
   }
 }
 
